--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -19,7 +19,7 @@
   - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
       - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
       - [一堆检查](#一堆检查)
-      - [分配vmcs](#分配vmcs)
+      - [给每个cpu分配vmcs](#给每个cpu分配vmcs)
   - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
   - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
   - [2.7. 注册reboot时候的通知函数](#27-注册reboot时候的通知函数)
@@ -223,7 +223,7 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 #### 一堆检查
 
 
-#### 分配vmcs
+#### 给每个cpu分配vmcs
 
 ```cpp
 alloc_kvm_area();
