--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -19,6 +19,7 @@
   - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
       - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
       - [一堆检查](#一堆检查)
+      - [posted中断的wakeup处理函数设置](#posted中断的wakeup处理函数设置)
       - [给每个cpu分配vmcs](#给每个cpu分配vmcs)
   - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
   - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
@@ -68,6 +69,7 @@ vmx_init()                               // 初始化入口
  |   |   |  ├─cpu_has_vmx_XXX()          // cpu是否有XXX
  |   |   |  ├─vmx_enable_tdp()           // ept支持时开启tdp
  |   |   |  ├─kvm_disable_tdp()          // 关闭tdp
+ |   |   |  ├─kvm_set_posted_intr_wakeup_handler()     // posted intr wakeup handler
  |   |   |  └─alloc_kvm_area()           // 给每个cpu分配一个struct vmcs
  |   |   └─kvm_init_msr_list()           // 
  |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
@@ -222,6 +224,11 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 #### 一堆检查
 
+#### posted中断的wakeup处理函数设置
+
+```cpp
+kvm_set_posted_intr_wakeup_handler(wakeup_handler);
+```
 
 #### 给每个cpu分配vmcs
 
