--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -16,11 +16,12 @@
     - [2.1.8. lapic初始化](#218-lapic初始化)
   - [2.2. workqueue?](#22-workqueue)
   - [2.3. 架构相关的硬件设置](#23-架构相关的硬件设置)
-  - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
-      - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
-      - [一堆检查](#一堆检查)
-      - [posted中断的wakeup处理函数设置](#posted中断的wakeup处理函数设置)
-      - [给每个cpu分配vmcs](#给每个cpu分配vmcs)
+    - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
+        - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
+        - [2.4.2. 一堆检查](#242-一堆检查)
+        - [2.4.3. posted中断的wakeup处理函数设置](#243-posted中断的wakeup处理函数设置)
+        - [2.4.4. 给每个cpu分配vmcs](#244-给每个cpu分配vmcs)
+    - [](#)
   - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
   - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
   - [2.7. 注册reboot时候的通知函数](#27-注册reboot时候的通知函数)
@@ -200,7 +201,7 @@ kvm_irqfd_init();
 kvm_arch_hardware_setup();
 ```
 
-## 2.4. vmx/svm的硬件配置hardware_setup()
+### 2.4. vmx/svm的硬件配置hardware_setup()
 
 实际上调用的是 
 
@@ -208,7 +209,7 @@ kvm_arch_hardware_setup();
 kvm_x86_ops->hardware_setup();
 ```
 
-#### 2.4.1. 设置全局vmcs_config和vmx_capability
+##### 2.4.1. 设置全局vmcs_config和vmx_capability
 
 ```cpp
 // arch/x86/kvm/vmx/capabilities.h
@@ -222,21 +223,27 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 这里的这两个全局变量不是指针, 而是真正值, 所以就直接分配了内存
 
-#### 一堆检查
+##### 2.4.2. 一堆检查
 
-#### posted中断的wakeup处理函数设置
+##### 2.4.3. posted中断的wakeup处理函数设置
 
 ```cpp
 kvm_set_posted_intr_wakeup_handler(wakeup_handler);
 ```
 
-#### 给每个cpu分配vmcs
+##### 2.4.4. 给每个cpu分配vmcs
 
 ```cpp
 alloc_kvm_area();
 ```
 
 给每个cpu分配vmcs
+
+### 
+
+```cpp
+kvm_init_msr_list();
+```
 
 ## 2.5. 检查处理器对vmx的兼容性
 
