--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -21,7 +21,7 @@
         - [2.4.2. 一堆检查](#242-一堆检查)
         - [2.4.3. posted中断的wakeup处理函数设置](#243-posted中断的wakeup处理函数设置)
         - [2.4.4. 给每个cpu分配vmcs](#244-给每个cpu分配vmcs)
-    - [](#)
+    - [msr保存到全局变量msrs_to_save[]数组](#msr保存到全局变量msrs_to_save数组)
   - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
   - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
   - [2.7. 注册reboot时候的通知函数](#27-注册reboot时候的通知函数)
@@ -72,7 +72,7 @@ vmx_init()                               // 初始化入口
  |   |   |  ├─kvm_disable_tdp()          // 关闭tdp
  |   |   |  ├─kvm_set_posted_intr_wakeup_handler()     // posted intr wakeup handler
  |   |   |  └─alloc_kvm_area()           // 给每个cpu分配一个struct vmcs
- |   |   └─kvm_init_msr_list()           // 
+ |   |   └─kvm_init_msr_list()           // 将msr保存到全局变量msrs_to_save[]数组
  |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
  |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
  |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
@@ -109,6 +109,13 @@ r = kvm_arch_init(opaque);
 ```
 
 主要是架构相关的检查和初始化
+
+```cpp
+kvm_lapic_exit();
+kvm_mmu_module_exit();
+free_percpu();
+kmem_cache_destory();
+```
 
 ### 2.1.1. 检查
 
@@ -239,11 +246,13 @@ alloc_kvm_area();
 
 给每个cpu分配vmcs
 
-### 
+### msr保存到全局变量msrs_to_save[]数组
 
 ```cpp
 kvm_init_msr_list();
 ```
+
+通过`rdmr_safe()`把msr保存到**全局**变量`msrs_to_save[]`数组.
 
 ## 2.5. 检查处理器对vmx的兼容性
 
