--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -16,20 +16,20 @@
     - [2.1.8. lapic初始化](#218-lapic初始化)
   - [2.2. workqueue?](#22-workqueue)
   - [2.3. 架构相关的硬件设置](#23-架构相关的硬件设置)
-    - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
-        - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
-        - [2.4.2. 一堆检查](#242-一堆检查)
-        - [2.4.3. posted中断的wakeup处理函数设置](#243-posted中断的wakeup处理函数设置)
-        - [2.4.4. 给每个cpu分配vmcs](#244-给每个cpu分配vmcs)
-    - [msr保存到全局变量msrs_to_save[]数组](#msr保存到全局变量msrs_to_save数组)
-  - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
-  - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
-  - [2.7. 注册reboot时候的通知函数](#27-注册reboot时候的通知函数)
-  - [2.8. 分配内存](#28-分配内存)
-  - [2.9. 赋值file_operations的模块名](#29-赋值file_operations的模块名)
-  - [2.10. 注册设备文件/dev/kvm](#210-注册设备文件devkvm)
-  - [2.11. 动作注册](#211-动作注册)
-  - [2.12. debugfs初始化](#212-debugfs初始化)
+    - [2.3.1. vmx/svm的硬件配置hardware_setup()](#231-vmxsvm的硬件配置hardware_setup)
+        - [2.3.1.1. 设置全局vmcs_config和vmx_capability](#2311-设置全局vmcs_config和vmx_capability)
+        - [2.3.1.2. 一堆检查](#2312-一堆检查)
+        - [2.3.1.3. posted中断的wakeup处理函数设置](#2313-posted中断的wakeup处理函数设置)
+        - [2.3.1.4. 给每个cpu分配vmcs](#2314-给每个cpu分配vmcs)
+    - [2.3.2. msr保存到全局变量msrs_to_save[]数组](#232-msr保存到全局变量msrs_to_save数组)
+  - [2.4. 检查每个处理器对vmx的兼容性](#24-检查每个处理器对vmx的兼容性)
+  - [2.5. 注册CPU状态变化的通知函数](#25-注册cpu状态变化的通知函数)
+  - [2.6. 注册reboot时候的通知函数](#26-注册reboot时候的通知函数)
+  - [2.7. 分配内存](#27-分配内存)
+  - [2.8. 赋值file_operations的模块名](#28-赋值file_operations的模块名)
+  - [2.9. 注册设备文件/dev/kvm](#29-注册设备文件devkvm)
+  - [2.10. 动作注册](#210-动作注册)
+  - [2.11. debugfs初始化](#211-debugfs初始化)
 - [3. 参考](#3-参考)
 
 <!-- /code_chunk_output -->
@@ -201,7 +201,7 @@ kvm_irqfd_init();
 kvm_arch_hardware_setup();
 ```
 
-### 2.4. vmx/svm的硬件配置hardware_setup()
+### 2.3.1. vmx/svm的硬件配置hardware_setup()
 
 实际上调用的是 
 
@@ -209,7 +209,7 @@ kvm_arch_hardware_setup();
 kvm_x86_ops->hardware_setup();
 ```
 
-##### 2.4.1. 设置全局vmcs_config和vmx_capability
+##### 2.3.1.1. 设置全局vmcs_config和vmx_capability
 
 ```cpp
 // arch/x86/kvm/vmx/capabilities.h
@@ -223,15 +223,15 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 这里的这两个全局变量不是指针, 而是真正值, 所以就直接分配了内存
 
-##### 2.4.2. 一堆检查
+##### 2.3.1.2. 一堆检查
 
-##### 2.4.3. posted中断的wakeup处理函数设置
+##### 2.3.1.3. posted中断的wakeup处理函数设置
 
 ```cpp
 kvm_set_posted_intr_wakeup_handler(wakeup_handler);
 ```
 
-##### 2.4.4. 给每个cpu分配vmcs
+##### 2.3.1.4. 给每个cpu分配vmcs
 
 ```cpp
 alloc_kvm_area();
@@ -239,7 +239,7 @@ alloc_kvm_area();
 
 给每个cpu分配vmcs
 
-### msr保存到全局变量msrs_to_save[]数组
+### 2.3.2. msr保存到全局变量msrs_to_save[]数组
 
 ```cpp
 kvm_init_msr_list();
@@ -247,7 +247,7 @@ kvm_init_msr_list();
 
 通过`rdmr_safe()`把msr保存到**全局**变量`msrs_to_save[]`数组.
 
-## 2.5. 检查处理器对vmx的兼容性
+## 2.4. 检查每个处理器对vmx的兼容性
 
 ```cpp
 for_each_online_cpu(cpu) {
@@ -261,7 +261,7 @@ for_each_online_cpu(cpu) {
 
 最终调用`vmx_check_processor_compat`, 检查处理器的兼容性
 
-## 2.6. 注册CPU状态变化的通知函数
+## 2.5. 注册CPU状态变化的通知函数
 
 ```cpp
 r = cpuhp_setup_state_nocalls(CPUHP_AP_KVM_STARTING, "kvm/cpu:starting",
@@ -324,7 +324,7 @@ static void hardware_disable_nolock(void *junk)
 }
 ```
 
-## 2.7. 注册reboot时候的通知函数
+## 2.6. 注册reboot时候的通知函数
 
 原理同上, 重启的时候会调用这个函数
 
@@ -332,7 +332,7 @@ static void hardware_disable_nolock(void *junk)
 register_reboot_notifier(&kvm_reboot_notifier);
 ```
 
-## 2.8. 分配内存
+## 2.7. 分配内存
 
 根据注释, 主要为了满足fx_save的对齐要求
 
@@ -348,7 +348,7 @@ kvm_vcpu_cache =
                     NULL);
 ```
 
-## 2.9. 赋值file_operations的模块名
+## 2.8. 赋值file_operations的模块名
 
 把早先传给kvm_init()的参数THIS_MODULE,也就是vmx的模块名分别赋值给三个file operation结构体变量:
 
@@ -390,7 +390,7 @@ static struct file_operations kvm_chardev_ops = {
 };
 ```
 
-## 2.10. 注册设备文件/dev/kvm
+## 2.9. 注册设备文件/dev/kvm
 
 ```cpp
 misc_register(&kvm_dev);
@@ -414,7 +414,7 @@ static struct miscdevice kvm_dev = {
 };
 ```
 
-## 2.11. 动作注册
+## 2.10. 动作注册
 
 ```cpp
 register_syscore_ops(&kvm_syscore_ops);
@@ -452,7 +452,7 @@ static __read_mostly struct preempt_ops kvm_preempt_ops;
 
 从命名看, `sched_in`和`sched_out`可以申请调度器对任务的换入换出.
 
-## 2.12. debugfs初始化
+## 2.11. debugfs初始化
 
 ```cpp
 kvm_init_debug();
