--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -334,7 +334,7 @@ register_reboot_notifier(&kvm_reboot_notifier);
 
 ## 2.7. 分配内存
 
-根据注释, 主要为了满足fx_save的对齐要求
+根据注释, 主要为了满足`fx_save`的对齐要求
 
 ```cpp
 /* A kmem cache lets us meet the alignment requirements of fx_save. */
@@ -350,7 +350,7 @@ kvm_vcpu_cache =
 
 ## 2.8. 赋值file_operations的模块名
 
-把早先传给kvm_init()的参数THIS_MODULE,也就是vmx的模块名分别赋值给三个file operation结构体变量:
+把早先传给`kvm_init()`的参数THIS_MODULE, 也就是**vmx的模块名**分别赋值给三个file operation结构体变量:
 
 ```cpp
 kvm_chardev_ops.owner = module;
