--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -77,7 +77,7 @@ vmx_init()                               // 初始化入口
  |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
  |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
  |   ├─ kvm_cache_create_usercopy()      // 创建kmem cache, 为了对齐
- |   ├─ kvm_async_pf_init()              // 
+ |   ├─ kvm_async_pf_init()              // 异步
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 注册系统核心函数, 这里是suspend和resume
  |   ├─ kvm_init_debug()                 // 初始化debugfs
