--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -30,6 +30,7 @@
   - [2.9. 注册设备文件/dev/kvm](#29-注册设备文件devkvm)
   - [2.10. 动作注册](#210-动作注册)
   - [2.11. debugfs初始化](#211-debugfs初始化)
+  - [vfio操作初始化](#vfio操作初始化)
 - [3. 参考](#3-参考)
 
 <!-- /code_chunk_output -->
@@ -81,7 +82,7 @@ vmx_init()                               // 初始化入口
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 注册系统核心函数, 这里是suspend和resume
  |   ├─ kvm_init_debug()                 // 初始化debugfs
- |   └─ kvm_vfio_ops_init()
+ |   └─ kvm_vfio_ops_init()				 // vfio的操作初始化
  ├─ vmx_setup_l1d_flush()                // 
  └─ vmx_check_vmcs12_offsets()
 ```
@@ -486,6 +487,12 @@ static int kvm_init_debug(void)
 ```cpp
 // arch/x86/kvm/x86.c
 struct kvm_stats_debugfs_item debugfs_entries[] = {
+```
+
+## vfio操作初始化
+
+```
+
 ```
 
 # 3. 参考
