--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -491,8 +491,14 @@ struct kvm_stats_debugfs_item debugfs_entries[] = {
 
 ## vfio操作初始化
 
+```cpp
+kvm_vfio_ops_init();
 ```
 
+其实就是调用了
+
+```cpp
+kvm_register_device_ops(&kvm_vfio_ops, KVM_DEV_TYPE_VFIO);
 ```
 
 # 3. 参考
