--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -30,7 +30,7 @@
   - [2.9. 注册设备文件/dev/kvm](#29-注册设备文件devkvm)
   - [2.10. 动作注册](#210-动作注册)
   - [2.11. debugfs初始化](#211-debugfs初始化)
-  - [vfio操作初始化](#vfio操作初始化)
+  - [2.12. vfio操作初始化](#212-vfio操作初始化)
 - [3. 参考](#3-参考)
 
 <!-- /code_chunk_output -->
@@ -489,7 +489,7 @@ static int kvm_init_debug(void)
 struct kvm_stats_debugfs_item debugfs_entries[] = {
 ```
 
-## vfio操作初始化
+## 2.12. vfio操作初始化
 
 ```cpp
 kvm_vfio_ops_init();
