--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -532,11 +532,11 @@ if (a == 5) {
 }
 ```
 
-“注意，这个规范与Linux内核的不太一样（内核代码中只有一条语句的语句块一般不使用大括号括起来，只需要缩进标志即可）。
+注意，这个规范与Linux内核的不太一样（内核代码中只有一条语句的语句块一般不使用大括号括起来，只需要缩进标志即可）。
 
-函数中大括号使用位置的示例如下（与Linux内核的风格相同）：”
+函数中大括号使用位置的示例如下（与Linux内核的风格相同）：
 
-Excerpt From: 任永杰. “KVM实战：原理、进阶与性能调优 (云计算与虚拟化技术丛书).” Apple Books. 
+
 
 ## 3.3. 生成patch
 
