--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -532,15 +532,20 @@ if (a == 5) {
 }
 ```
 
-注意，这个规范与Linux内核的不太一样（内核代码中只有一条语句的语句块一般不使用大括号括起来，只需要缩进标志即可）。
+注意，这个规范与Linux内核的不太一样（**内核代码**中**只有一条语句**的语句块一般**不使用大括号**括起来，只需要缩进标志即可）。
 
 函数中大括号使用位置的示例如下（与Linux内核的风格相同）：
 
-
+```cpp
+void a_function(void)
+{
+    do_something();
+}
+```
 
 ## 3.3. 生成patch
 
-patch是**GNU diff工具**生成的**输出内容**，这种输出格式能够被patch工具正确读取并添加到相应的代码仓库中。
+patch是**GNU diff工具**生成的**输出内容**，这种输出格式能够被**patch工具**正确读取并添加到相应的代码仓库中。
 
 当然，patch文件还可以由一些**源代码版本控制工具**来生成，如：SVN、CSV、Mercurial、Git等。
 
