--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -701,16 +701,15 @@ them to the maintainer, see CHECKPATCH in MAINTAINERS.
 
 发现了一个错误和一个警告，错误是缺少“Signed-off-by：”这样的行，警告是printk(KERN_INFO...)这样的写法是不推荐的（最好用pr_info()函数来代替）。
 
-所以需要再编辑patch，在其中添加`Signed-off-by：Jay<smile665@gmail.com>`这样的作者信息行，当然有**多个作者**可以用多行“Signed-off-by：”。
+所以需要再编辑patch，在其中添加`Signed-off-by：Jay<smile665@gmail.com>`这样的作者信息行，当然有**多个作者**可以用**多行**“Signed-off-by：”。
 
 另外，有时还可以**根据需要**添加其他的**多行信息**，如下：
 
-```
-“Reviewed-by:” 当有人做过审查代码时（一般是社区中资深人士）￼
-“Acked-by:” 当有人表示响应和同意时（一般是社区中资深人士）￼
-“Reported-by:” 当某人报告了一个问题，本patch就修复那个问题时￼
-“Tested-by:” 当某人测试了本patch时
-```
+- “Reviewed-by:” 当有人做过**审查代码**时（一般是社区中资深人士）￼
+- “Acked-by:” 当有人表示**响应和同意**时（一般是社区中资深人士）￼
+- “Reported-by:” 当某人**报告了一个问题**，本patch就修复那个问题时￼
+- “Tested-by:” 当某人**测试了本patch**时
+
 
 另外，可以在**检查脚本**中加`--no-signoff`参数来忽略对“Signed-off-by：”的检查，示例命令为：`scripts/checkpatch.pl --no-signoff my.patch`。
 
@@ -761,6 +760,7 @@ total: 0 errors, 0 warnings, 8 lines checked￼
 ## 3.5. 提交patch
 
 准备好patch了后，最后要做的事情当然是提交patch了。KVM和QEMU的patch提交都是通过发送到邮件列表来实现的，KVM开发者邮件列表是kvm@vger.kernel.org，QEMU开发者邮件列表是qemu-devel@nongnu.org。QEMU代码中针对KVM相关修改的patch，需要发送到KVM邮件列表，并且抄送QEMU邮件列表。
+
 除了邮件列表之外，一般收件人或抄送人中还包含该项目或子模块的维护者，以便让维护者将patch添加到upstream中。那么如何才能找到patch相关的维护者呢？首先，可以根据Linux内核和QEMU项目源代码中的“MAINTAINERS”文件查看维护者的信息以及他们负责的模块，然后根据patch中的改动及其影响找到影响的维护者。其次，Linux内核和QEMU代码仓库中都提供了一个根据patch查找到维护者的脚本，其位置都在源代码的“scripts/get_maintainer.pl”中。根据patch获得维护者信息的脚本的示例如下：
 
 
