--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM性能优化/1. CPU优化.md
+++ b/Virtualization/Learning/KVM性能优化/1. CPU优化.md
@@ -3,26 +3,26 @@
 
 <!-- code_chunk_output -->
 
-* [1 SMP技术](#1-smp技术)
-* [2 NUMA技术](#2-numa技术)
-* [3 numactl命令详解](#3-numactl命令详解)
-* [4 CPU的numa情况](#4-cpu的numa情况)
-	* [4.1 CPU信息](#41-cpu信息)
-	* [4.2 NUMA的CPU调度情况](#42-numa的cpu调度情况)
-	* [4.3 查看进程在NUMA节点内存使用](#43-查看进程在numa节点内存使用)
-	* [4.4 numa平衡开关](#44-numa平衡开关)
-* [5 CPU的绑定操作](#5-cpu的绑定操作)
-	* [5.1 查看虚拟机列表](#51-查看虚拟机列表)
-	* [5.2 查看虚拟机VCPU对应的物理CPU情况](#52-查看虚拟机vcpu对应的物理cpu情况)
-	* [5.3 虚拟机的所有vCPU绑定到物理CPU](#53-虚拟机的所有vcpu绑定到物理cpu)
-	* [5.4 不同vCPU绑定到不同的物理CPU](#54-不同vcpu绑定到不同的物理cpu)
-* [6 CPU热添加](#6-cpu热添加)
-	* [6.1 查看虚拟机的CPU数值](#61-查看虚拟机的cpu数值)
-	* [6.2 最大CPU分配数](#62-最大cpu分配数)
-	* [6.3 热添加CPU](#63-热添加cpu)
-	* [6.4 激活CPU](#64-激活cpu)
-* [7 CPU热减少](#7-cpu热减少)
-* [8 参考](#8-参考)
+- [1. SMP技术](#1-smp技术)
+- [2. NUMA技术](#2-numa技术)
+- [3. numactl命令详解](#3-numactl命令详解)
+- [4. CPU的numa情况](#4-cpu的numa情况)
+  - [4.1. CPU信息](#41-cpu信息)
+  - [4.2. NUMA的CPU调度情况](#42-numa的cpu调度情况)
+  - [4.3. 查看进程在NUMA节点内存使用](#43-查看进程在numa节点内存使用)
+  - [4.4. numa平衡开关](#44-numa平衡开关)
+- [5. CPU的绑定操作](#5-cpu的绑定操作)
+  - [5.1. 查看虚拟机列表](#51-查看虚拟机列表)
+  - [5.2. 查看虚拟机VCPU对应的物理CPU情况](#52-查看虚拟机vcpu对应的物理cpu情况)
+  - [5.3. 5.3 虚拟机的所有vCPU绑定到物理CPU](#53-53-虚拟机的所有vcpu绑定到物理cpu)
+  - [5.4. 不同vCPU绑定到不同的物理CPU](#54-不同vcpu绑定到不同的物理cpu)
+- [6. CPU热添加](#6-cpu热添加)
+  - [6.1. 查看虚拟机的CPU数值](#61-查看虚拟机的cpu数值)
+  - [6.2. 最大CPU分配数](#62-最大cpu分配数)
+  - [6.3. 热添加CPU](#63-热添加cpu)
+  - [6.4. 激活CPU](#64-激活cpu)
+- [7. CPU热减少](#7-cpu热减少)
+- [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
 
@@ -34,7 +34,7 @@ CPU这块我们是针对NUMA这块的调优. NUMA是英文 Non Uniform Memory Ac
 
 于是就设计出了以下几套解决方案：
 
-# 1 SMP技术
+# 1. SMP技术
 
 最开始是SMP技术，SMP（Symmetric Multi\-Processing ）技术就是对称多处理结构，这种结构的最大特点就是CPU共享所有资源，比如总线，内存，IO系统等等。
 
@@ -50,7 +50,7 @@ CPU这块我们是针对NUMA这块的调优. NUMA是英文 Non Uniform Memory Ac
 
 ![](./images/2019-04-10-19-41-43.png)
 
-# 2 NUMA技术
+# 2. NUMA技术
 
 NUMA刚才我们在前面说了是非统一内存访问的意思，它的出现就很好的解决了SMP的扩展问题。有了NUMA技术那么就可以把几十个甚至上百个CPU组合在一个服务器內。
 
@@ -80,7 +80,7 @@ NUMA架构设计图：
 
 那如何操作呢?
 
-# 3 numactl命令详解
+# 3. numactl命令详解
 
 首先我们用numactl命令查看NUMA的情况，如果你系统没有这个命令，用 yum install numactl 安装下即可。
 
@@ -113,11 +113,11 @@ man numactl
 - number1-number2    node number1 -- node number2 区间上的所有存在的 node 的 NUMA 特性将会被移除
 - !nodes: 除了 nodes 所指定的节点以外的所有节点上的 NUMA 特性全都会被移除
 
-# 4 CPU的numa情况
+# 4. CPU的numa情况
 
 OK，以上是numactl的详细命令，那么接下来我们先看看当前服务器CPU的numa情况：
 
-## 4.1 CPU信息
+## 4.1. CPU信息
 
 我们执行lscpu命令可以查看到一些CPU信息：
 
@@ -135,7 +135,7 @@ IBM 3850M2，那么它就只有一个node:
 
 ![](./images/2019-04-11-09-05-32.png)
 
-## 4.2 NUMA的CPU调度情况
+## 4.2. NUMA的CPU调度情况
 
 接下来看下CPU numa的调度分配情况, 通过numastat命令
 
@@ -156,7 +156,7 @@ IBM 3850M2:
 - local\_node: 在本节点运行的程序使用本节点内存次数
 - NB other\_node: 在**其他节点运行的程序**使用**本节点内存次数**
 
-## 4.3 查看进程在NUMA节点内存使用
+## 4.3. 查看进程在NUMA节点内存使用
 
 接着我们看下这个命令：numastat \-c, 这个命令c 后面跟上进程名就能看到相关进程的NUMA内存使用情况。比如：numastat -c qemu\-kvm，这样我们就知道了qemu\-kvm这个进程，它在node0 和node1上使用的内存大小，单位是MB：
 
@@ -166,7 +166,7 @@ IBM 3850M2:
 
 通过这几个命令我们可以查看一些numa的基本状态和使用情况。
 
-## 4.4 numa平衡开关
+## 4.4. numa平衡开关
 
 那么针对CPU Numa技术，linux操作系统本身也有自身对这块的设计。
 
@@ -182,19 +182,19 @@ IBM 3850M2:
 # echo 1 > /proc/sys/kernel/numa_balancing
 ```
 
-# 5 CPU的绑定操作
+# 5. CPU的绑定操作
 
 既然我们的操作系统还有CPU特性都采用了NUMA架构，那么我们完全可以通过**调整KVM对应的NUMA关系**来达到**KVM CPU这方面的优化**。这里，我们一般是通过**CPU绑定的方法**来做相关操作的。
 
 那么具体的操作是怎么样的呢？那么接下来我们通过一个例子来演示。
 
-## 5.1 查看虚拟机列表
+## 5.1. 查看虚拟机列表
 
 用 virsh list 命令可以查看到当前运行的虚拟机列表。
 
 ![](./images/2019-04-11-08-54-22.png)
 
-## 5.2 查看虚拟机VCPU对应的物理CPU情况
+## 5.2. 查看虚拟机VCPU对应的物理CPU情况
 
 看这个Win7-ent虚拟机里vCPU对应物理CPU的情况，那么可以运行：
 
@@ -218,7 +218,7 @@ IBM 3850M2:
 
 可见, 目前这个虚拟机可以在物理机的两个numa节点一共24个核上调度使用
 
-## 5.3 虚拟机的所有vCPU绑定到物理CPU
+## 5.3. 5.3 虚拟机的所有vCPU绑定到物理CPU
 
 如果我们要把虚拟机绑定到固定的CPU上，我们就要做以下操作： 
 
@@ -246,7 +246,7 @@ IBM 3850M2:
 
 这是让虚拟机的所有vCPU绑定到一起的方法
 
-## 5.4 不同vCPU绑定到不同的物理CPU
+## 5.4. 不同vCPU绑定到不同的物理CPU
 
 一个虚拟机我有两个vCPU, 比如这个win7 ，它就是双核的，我想让里面的vCPU1和vCPU2分别绑定在不同的物理CPU上可以吗？怎么操作呢？
 
@@ -282,11 +282,11 @@ IBM 3850M2:
 
 ![](./images/2019-04-11-13-10-41.png)
 
-# 6 CPU热添加
+# 6. CPU热添加
 
 热添加就是在虚拟机运行不关机的情况下，做CPU的添加操作。那么要注意的是，这个热添加是在Redhat7.0以后才出现的，之前是没有的。所以要享用这功能那必须要求KVM宿主机和虚拟机都得在7.0版本以后。
 
-## 6.1 查看虚拟机的CPU数值
+## 6.1. 查看虚拟机的CPU数值
 
 查看当前虚拟机的CPU数值
 
@@ -298,7 +298,7 @@ cat /proc/cpuinfo| grep "processor"| uniq| wc -l
 
 ![](./images/2019-04-11-13-21-58.png)
 
-## 6.2 最大CPU分配数
+## 6.2. 最大CPU分配数
 
 ```
 # virsh dumpxml id
@@ -319,7 +319,7 @@ current      live           2
 
 最大CPU分配数是给这个虚拟机最大预留的CPU个数，这个设置很重要，如果你想给虚拟机热添加，那么这个设置必须写。比如我们这里写的4，那么我们可以给虚拟机最大热添加到4个CPU，而且4是上限。
 
-## 6.3 热添加CPU
+## 6.3. 热添加CPU
 
 那么接下来说下，具体怎么热添加。我们先在宿主机里先给这个虚拟机添加第三个CPU，原来是2个，现在再添加一个变成3个： 
 
@@ -327,7 +327,7 @@ current      live           2
 virsh setvcpus VM3_CentOS7.1 3 --live
 ```
 
-## 6.4 激活CPU
+## 6.4. 激活CPU
 
 然后我们到虚拟机里面把这个CPU激活 ：
 
@@ -339,7 +339,7 @@ echo 1 >/sys/devices/system/cpu/cpu2/online
 
 我们再运行查看，发现已经变成3个了。
 
-# 7 CPU热减少
+# 7. CPU热减少
 
 如果要减少，那么只能在虚拟机里减少刚才的CPU
 
@@ -355,7 +355,7 @@ echo 1 >/sys/devices/system/cpu/cpu2/online
 
 只是将VCPU离线了而已
 
-# 8 参考
+# 8. 参考
 
 <http://www.cnblogs.com/yubo/archive/2010/04/23/1718810.html>
 
