--- a/Virtualization/Learning/KVM性能优化/2. 内存优化.md
+++ b/Virtualization/Learning/KVM性能优化/2. 内存优化.md
@@ -3,13 +3,13 @@
 
 <!-- code_chunk_output -->
 
-* [1 概述](#1-概述)
-* [2 EPT技术](#2-ept技术)
-* [3 大页和透明大页](#3-大页和透明大页)
+- [1. 概述](#1-概述)
+- [2. EPT技术](#2-ept技术)
+- [3. 大页和透明大页](#3-大页和透明大页)
 
 <!-- /code_chunk_output -->
 
-# 1 概述
+# 1. 概述
 
 内存方面有以下四个方向去着手：
 
@@ -21,7 +21,7 @@
 
 4. 内存限制
 
-# 2 EPT技术
+# 2. EPT技术
 
 EPT也就是扩展页表，这是intel开创的硬件辅助内存虚拟化技术。我们知道内存的使用，是一个逻辑地址跟物理地址转换的过程。虚拟机内部有逻辑地址转成成物理地址的过程，然后再跳出来，虚拟机这块内存又跟宿主机存在逻辑到物理的转换。有了EPT技术，那么能够将虚拟机的物理地址直接翻译为宿主机的物理地址，从而把后面那个转换过程去掉了，增加了效率。
 
@@ -31,7 +31,7 @@ EPT也就是扩展页表，这是intel开创的硬件辅助内存虚拟化技术
 
 ![](./images/2019-04-11-14-17-22.png)
 
-# 3 大页和透明大页
+# 3. 大页和透明大页
 
 我们先解释什么叫大页。
 
