--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/01-description/00-(n)uma/3种系统架构与2种存储器共享方式.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/01-description/00-(n)uma/3种系统架构与2种存储器共享方式.md
@@ -3,32 +3,32 @@
 
 <!-- code_chunk_output -->
 
-* [1 3种系统架构与2种存储器共享方式](#1-3种系统架构与2种存储器共享方式)
-	* [1.1 架构概述](#11-架构概述)
-	* [1.2 SMP(Symmetric Multi-Processor)](#12-smpsymmetric-multi-processor)
-	* [1.3 NUMA(Non-Uniform Memory Access)](#13-numanon-uniform-memory-access)
-		* [1.3.1 NUMA Hierarchy](#131-numa-hierarchy)
-		* [1.3.2 NUMA Node内部](#132-numa-node内部)
-			* [1.3.2.1 物理CPU](#1321-物理cpu)
-				* [1.3.2.1.1 Socket](#13211-socket)
-				* [1.3.2.1.2 Core](#13212-core)
-				* [1.3.2.1.3 Uncore](#13213-uncore)
-				* [1.3.2.1.4 Threads](#13214-threads)
-		* [1.3.3 本地内存](#133-本地内存)
-		* [1.3.4 本地IO资源](#134-本地io资源)
-		* [1.3.5 NUMA Node互联](#135-numa-node互联)
-		* [1.3.6 NUMA Affinity](#136-numa-affinity)
-		* [1.3.7 Firmware接口](#137-firmware接口)
-	* [1.4 MPP(Massive Parallel Processing)](#14-mppmassive-parallel-processing)
-* [2 三种体系架构之间的差异](#2-三种体系架构之间的差异)
-	* [2.1 NUMA、MPP、SMP之间性能的区别](#21-numa-mpp-smp之间性能的区别)
-	* [2.2 NUMA、MPP、SMP之间扩展的区别](#22-numa-mpp-smp之间扩展的区别)
-	* [2.3 MPP和SMP、NUMA应用之间的区别](#23-mpp和smp-numa应用之间的区别)
-	* [3 总结](#3-总结)
+- [3种系统架构与2种存储器共享方式](#3种系统架构与2种存储器共享方式)
+  - [1.1 架构概述](#11-架构概述)
+  - [1.2 SMP(Symmetric Multi-Processor)](#12-smpsymmetric-multi-processor)
+  - [1.3 NUMA(Non-Uniform Memory Access)](#13-numanon-uniform-memory-access)
+    - [1.3.1 NUMA Hierarchy](#131-numa-hierarchy)
+    - [1.3.2 NUMA Node内部](#132-numa-node内部)
+      - [1.3.2.1 物理CPU](#1321-物理cpu)
+        - [1.3.2.1.1 Socket](#13211-socket)
+        - [1.3.2.1.2 Core](#13212-core)
+        - [1.3.2.1.3 Uncore](#13213-uncore)
+        - [1.3.2.1.4 Threads](#13214-threads)
+    - [1.3.3 本地内存](#133-本地内存)
+    - [1.3.4 本地IO资源](#134-本地io资源)
+    - [1.3.5 NUMA Node互联](#135-numa-node互联)
+    - [1.3.6 NUMA Affinity](#136-numa-affinity)
+    - [1.3.7 Firmware接口](#137-firmware接口)
+  - [1.4 MPP(Massive Parallel Processing)](#14-mppmassive-parallel-processing)
+- [2 三种体系架构之间的差异](#2-三种体系架构之间的差异)
+  - [2.1 NUMA、MPP、SMP之间性能的区别](#21-numa-mpp-smp之间性能的区别)
+  - [2.2 NUMA、MPP、SMP之间扩展的区别](#22-numa-mpp-smp之间扩展的区别)
+  - [2.3 MPP和SMP、NUMA应用之间的区别](#23-mpp和smp-numa应用之间的区别)
+  - [3 总结](#3-总结)
 
 <!-- /code_chunk_output -->
 
-# 1 3种系统架构与2种存储器共享方式
+# 3种系统架构与2种存储器共享方式
 
 ## 1.1 架构概述
 
