--- Auto-Git Commit ---

--- a/Linux/Tools/cyclictest/简介.md
+++ b/Linux/Tools/cyclictest/简介.md
@@ -7,7 +7,32 @@ cyclictest 是什么？
 
 # 安装
 
+预先包安装
 
+```
+yum install numactl-devel
+```
+
+下载安装
+
+```
+git clone git://git.kernel.org/pub/scm/utils/rt-tests/rt-tests.git
+cd rt-tests
+git tag
+git checkout -b 1.5 v1.5
+make all
+make install
+```
+
+如果想编译单个target
+
+```
+make cyclictest
+```
+
+# 使用
+
+通过`cyclictest --help`查看参数含义
 
 
 
