--- Auto-Git Commit ---

--- a/Linux/Tools/rt-tests/cyclictest/简介.md
+++ b/Linux/Tools/rt-tests/cyclictest/简介.md
@@ -201,6 +201,14 @@ cyclictest <options>
 
 ```
 
+执行报错
+
+```
+# ./cyclictest -a 1 -n -p 99 -I 1000 -l 1000 -t 1 -D 100 -h 30 -q
+Unable to change scheduling policy!
+either run as root or join realtime group
+```
+
 # 参考
 
 Linux Foundation: https://wiki.linuxfoundation.org/realtime/documentation/howto/tools/rt-tests
