--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
@@ -3,36 +3,36 @@
 
 <!-- code_chunk_output -->
 
-- [vCPU的概念](#vcpu的概念)
-  - [vCPU的三种模式](#vcpu的三种模式)
-  - [1.2 KVM下系统架构](#12-kvm下系统架构)
-- [2 SMP的支持](#2-smp的支持)
-  - [2.1 硬件支持](#21-硬件支持)
-  - [2.2 操作系统支持](#22-操作系统支持)
-  - [2.3 QEMU的支持](#23-qemu的支持)
-    - [2.3.1 \-smp参数](#231-smp参数)
-    - [2.3.2 默认不加\-smp](#232-默认不加-smp)
-    - [2.3.3 \-smp 8](#233-smp-8)
-    - [2.3.4 \-smp 8,sockets=2,cores=2,threads=2](#234-smp-8sockets2cores2threads2)
-    - [2.3.5 \-smp 4,maxcpus=8](#235-smp-4maxcpus8)
-- [3 CPU过载使用](#3-cpu过载使用)
-- [4 CPU模型](#4-cpu模型)
-  - [4.1 \-cpu ?查看所有模型](#41-cpu-查看所有模型)
-  - [4.2 不加\-cpu默认CPU模型](#42-不加-cpu默认cpu模型)
-  - [4.3 \-cpu model指定模型](#43-cpu-model指定模型)
-- [5 进程的处理器亲和性和vCPU的绑定](#5-进程的处理器亲和性和vcpu的绑定)
-  - [5.1 启动隔离](#51-启动隔离)
-  - [5.2 启动虚拟机并绑定vCPU](#52-启动虚拟机并绑定vcpu)
+- [1. vCPU的概念](#1-vcpu的概念)
+  - [1.1. vCPU的三种模式](#11-vcpu的三种模式)
+  - [1.2. KVM下系统架构](#12-kvm下系统架构)
+- [2. SMP的支持](#2-smp的支持)
+  - [2.1. 硬件支持](#21-硬件支持)
+  - [2.2. 操作系统支持](#22-操作系统支持)
+  - [2.3. QEMU的支持](#23-qemu的支持)
+    - [2.3.1. -smp参数](#231-smp参数)
+    - [2.3.2. 默认不加-smp](#232-默认不加-smp)
+    - [2.3.3. -smp 8](#233-smp-8)
+    - [2.3.4. -smp 8,sockets=2,cores=2,threads=2](#234-smp-8sockets2cores2threads2)
+    - [2.3.5. -smp 4,maxcpus=8](#235-smp-4maxcpus8)
+- [3. CPU过载使用](#3-cpu过载使用)
+- [4. CPU模型](#4-cpu模型)
+  - [4.1. -cpu ?查看所有模型](#41-cpu-查看所有模型)
+  - [4.2. 不加-cpu默认CPU模型](#42-不加-cpu默认cpu模型)
+  - [4.3. -cpu model指定模型](#43-cpu-model指定模型)
+- [5. 进程的处理器亲和性和vCPU的绑定](#5-进程的处理器亲和性和vcpu的绑定)
+  - [5.1. 启动隔离](#51-启动隔离)
+  - [5.2. 启动虚拟机并绑定vCPU](#52-启动虚拟机并绑定vcpu)
 
 <!-- /code_chunk_output -->
 
-# vCPU的概念
+# 1. vCPU的概念
 
 **QEMU/KVM**为客户机提供一套完整的**硬件系统环境**，在**客户机**看来，其所拥有的CPU即是**vCPU（virtual CPU**）。
 
 在KVM环境中，**每个客户机**都是一个**标准的Linux进程（QEMU进程**），而**每一个vCPU**在宿主机中是**QEMU进程派生**的一个**普通线程**。
 
-## vCPU的三种模式
+## 1.1. vCPU的三种模式
 
 在**普通的Linux系统**中，进程一般有**两种执行模式**：**内核模式**和**用户模式**。
 
@@ -56,7 +56,7 @@ vCPU在KVM中的这3种执行模式下的转换如图5\-1所示。
 
 ![](./images/2019-05-19-20-06-17.png)
 
-## 1.2 KVM下系统架构
+## 1.2. KVM下系统架构
 
 在KVM环境中，整个系统的基本分层架构如图5\-2所示。
 
@@ -73,15 +73,15 @@ vCPU在KVM中的这3种执行模式下的转换如图5\-1所示。
 
 和普通操作系统一样，在**客户机系统**中，同样分别运行着客户机的内核和客户机的用户空间应用程序。
 
-# 2 SMP的支持
+# 2. SMP的支持
 
 在**SMP系统**中，**多个程序（进程**）可以真正做到**并行执行**，而且单个进程的多个线程也可以得到并行执行，这极大地提高了计算机系统并行处理能力和整体性能。
 
-## 2.1 硬件支持
+## 2.1. 硬件支持
 
 在**硬件**方面，**早期**的计算机系统更多的是在**一个主板**上拥有**多个物理的CPU插槽**，来实现SMP系统。后来，随着**多核技术**、**超线程（Hyper\-Threading**）技术的出现，SMP系统使用**多处理器**、**多核**、**超线程**等技术中的**一个或多个**。
 
-## 2.2 操作系统支持
+## 2.2. 操作系统支持
 
 在**操作系统软件**方面，多数的现代操作系统都提供了**对SMP系统的支持**。
 
@@ -129,7 +129,7 @@ else￼
 fi
 ```
 
-## 2.3 QEMU的支持
+## 2.3. QEMU的支持
 
 SMP是如此的普及和被广泛使用，而**QEMU**在给**客户机模拟CPU**时，也可以提供**对SMP架构的模拟**，让客户机运行在SMP系统中，充分利用物理硬件的SMP并行处理优势。
 
@@ -138,7 +138,7 @@ SMP是如此的普及和被广泛使用，而**QEMU**在给**客户机模拟CPU*
 - 一是将**不同的vCPU的进程交换执行**（分时调度，即使物理硬件非SMP，也可以为客户机模拟出SMP系统环境），
 - 二是将在**物理SMP硬件系统**上**同时执行多个vCPU的进程**。
 
-### 2.3.1 \-smp参数
+### 2.3.1. -smp参数
 
 在qemu命令行中，“\-**smp**”参数即是配置客户机的SMP系统，其具体参数如下：
 
@@ -156,7 +156,7 @@ SMP是如此的普及和被广泛使用，而**QEMU**在给**客户机模拟CPU*
 
 下面通过KVM中的几个qemu命令行示例，来看一下如何将SMP应用于客户机中。
 
-### 2.3.2 默认不加\-smp
+### 2.3.2. 默认不加-smp
 
 示例1：￼
 
@@ -220,7 +220,7 @@ root   11394  9766 11394  0  1 15:54 pts/2  00:00:00 grep --color=auto qemu
 
 由以上信息可以看出，PID（Process ID）为10744的进程是客户机的进程，它产生了1个线程（线程ID为10747）作为客户机的vCPU运行在宿主机中￼。其中，**ps命令**的\-**L参数**指定打印出**线程的ID和线程的个数**，\-**e参数**指定选择**所有的进程**，\-**f参数**指定选择**打印出完全的各列**。
 
-### 2.3.3 \-smp 8
+### 2.3.3. -smp 8
 
 示例2：
 
@@ -282,7 +282,7 @@ root     186519 178215 186519  0    1 21:47 pts/6    00:00:00 grep --color=auto 
 
 由以上信息可知，PID为186360的进程是QEMU启动客户机的进程，它产生了**8个线程**作为**客户机的8个vCPU**在运行。
 
-### 2.3.4 \-smp 8,sockets=2,cores=2,threads=2
+### 2.3.4. -smp 8,sockets=2,cores=2,threads=2
 
 示例3：
 
@@ -307,7 +307,7 @@ cpu0  cpu1  cpu2  cpu3  cpu4  cpu5  cpu6  cpu7  cpuidle  isolated  kernel_max  m
 
 从上面的输出信息可知，客户机中共有8个逻辑CPU（cpu0\~cpu7），2个CPU socket，每个socket有2个核，每个核有2个线程（超线程处于打开状态）。
 
-### 2.3.5 \-smp 4,maxcpus=8
+### 2.3.5. -smp 4,maxcpus=8
 
 示例4：
 
@@ -409,7 +409,7 @@ cpu0  cpu1  cpu2  cpu3  cpu4  cpuidle  isolated  kernel_max  microcode  modalias
 
 可以看到客户机变成有**5个CPU**了。但是可以看到，**新增的CPU编号**却是**连续的（cpu4！！！**），尽管我们**热插入的是\#7号CPU**。
 
-# 3 CPU过载使用
+# 3. CPU过载使用
 
 KVM允许客户机过载使用（over\-commit）物理资源，即允许为**客户机分配的CPU**和**内存数量**多于物理上**实际存在的资源**。
 
@@ -425,7 +425,7 @@ QEMU会启动**更多的线程**来为客户机提供服务，这些线程也被
 
 总的来说，KVM允许CPU的过载使用，但是并**不推荐在实际的生产环境**（特别是负载较重的环境）中过载使用CPU。在生产环境中过载使用CPU，有必要在部署前进行严格的性能和稳定性测试。
 
-# 4 CPU模型
+# 4. CPU模型
 
 **每一种虚拟机管理程序**（Virtual Machine Monitor，简称**VMM或Hypervisor**）都会定义自己的策略，让客户机看起来有一个**默认的CPU类型**。
 
@@ -433,7 +433,7 @@ QEMU会启动**更多的线程**来为客户机提供服务，这些线程也被
 
 QEMU/KVM的这种策略会带来一些好处，如可以**对CPU特性**提供一些**高级的过滤功能**，还可以将**物理平台**根据提供的**基本CPU模型**进行**分组**（如将几台IvyBridge和Sandybridge硬件平台分为一组，都提供相互兼容的SandyBridge或qemu64的CPU模型），从而使客户机在同一组硬件平台上的动态迁移更加平滑和安全。
 
-## 4.1 \-cpu ?查看所有模型
+## 4.1. -cpu ?查看所有模型
 
 通过如下的命令行可以查看**当前的QEMU**支持的**所有CPU模型**。
 
@@ -495,7 +495,7 @@ x86 max                   Enables all features supported by the accelerator in t
 
 这些CPU模型是在源代码**qemu.git/target/i386/cpu.c**中的结构体数组**builtin\_x86\_defs**\[\]中定义的。
 
-## 4.2 不加\-cpu默认CPU模型
+## 4.2. 不加-cpu默认CPU模型
 
 在x86\-64平台上编译和运行的QEMU，在**不加“\-cpu**”参数启动时，采用“**qemu64**”作为**默认的CPU模型**，命令行演示如下：
 
@@ -538,7 +538,7 @@ power management:
 
 可知，在**客户机**中看到的**CPU模型**的名称为“**QEMU Virtual CPU version 2.5\+**”，这就是**当前版本QEMU**的“**qemu64**”CPU模型的**名称**。
 
-## 4.3 \-cpu model指定模型
+## 4.3. -cpu model指定模型
 
 在qemu命令行中，可以用“\-**cpu cpu\_model**”来指定在客户机中的CPU模型。如下的命令行就在启动客户机时指定了CPU模型为Broadwell。
 
@@ -586,7 +586,7 @@ power management:
 
 其中的vendor\_id、cpu family、flags、cpuid level等都是在target/i386/cpu.c的buildin\_x86\_defs\[\]中定义好的，具体的关于Broadwell这个CPU模型的定义如下：
 
-```c
+```dict
 {
     .name = "Broadwell",
     .level = 0xd,
@@ -627,7 +627,7 @@ power management:
 },
 ```
 
-# 5 进程的处理器亲和性和vCPU的绑定
+# 5. 进程的处理器亲和性和vCPU的绑定
 
 通常在SMP系统中，Linux内核的进程调度器根据自有的调度策略将系统中的**一个进程**调度到**某个CPU**上执行。在**默认情况**下，**一个普通进程或线程**的处理器亲和性体现在**所有可用的CPU**上，进程或线程有可能在这些CPU之中的任何一个（包括超线程）上执行。
 
@@ -641,7 +641,7 @@ power management:
 
 作为IaaS（Infrastructure as a Service）类型的云计算提供商的A公司（如Amazon、Google、Azure、阿里云等），为客户提供一个有**两个逻辑CPU计算能力**的一个客户机。要求**CPU资源独立被占用**，不受宿主机中其他客户机的负载水平的影响。为了满足这个需求，可以分如下**两个步骤**来实现。
 
-## 5.1 启动隔离
+## 5.1. 启动隔离
 
 启动宿主机时**隔离出两个逻辑CPU**专门供一个客户机使用。
 
@@ -697,7 +697,7 @@ root       8332   6623   8332   1 ps -eLo ruser,pid,ppid,lwp,psr,args
 
 这里简单解释一下上面的一些命令行工具及其参数的意义。ps命令显示当前系统的进程信息的状态，它的“\-e”参数用于显示所有的进程，“\-L”参数用于将线程（light\-weight process，LWP）也显示出来，“\-o”参数表示以用户自定义的格式输出（其中“psr”这列表示当前分配给进程运行的处理器编号，“lwp”列表示线程的ID，“ruser”表示运行进程的用户，“pid”表示进程的ID，“ppid”表示父进程的ID，“args”表示运行的命令及其参数）。结合ps和awk工具的使用，是为了分别将在处理器cpu4和cpu5上运行的进程打印出来。
 
-## 5.2 启动虚拟机并绑定vCPU
+## 5.2. 启动虚拟机并绑定vCPU
 
 启动一个拥有两个vCPU的客户机，并将其vCPU绑定到宿主机中两个CPU上。此操作过程的命令行如下：
 
