--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
@@ -655,26 +655,26 @@ BOOT_IMAGE=/vmlinuz-3.10.0-514.el7.x86_64 root=/dev/mapper/rhel-root ro crashker
 在系统启动后，在宿主机中检查是否隔离成功的命令行如下：
 
 ```
-[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*0$" | wc -l￼
+[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*0$" | wc -l
 23￼
-[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*1$" | wc -l￼
+[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*1$" | wc -l
 10￼
 [root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*2$" | wc -l￼
 28￼
-[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*3$" | wc -l￼
+[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*3$" | wc -l
 23￼
-[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*4$" | wc -l￼
+[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*4$" | wc -l
 5￼
-[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*5$" | wc -l￼
+[root@kvm-host ~]# ps -eLo psr | grep -e "^[[:blank:]]*5$" | wc -l
 6￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==5) print $0}'￼
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==5) print $0}'
 root         32      2     32   5 [watchdog/5]￼
 root         33      2     33   5 [migration/5]￼
 root         34      2     34   5 [ksoftirqd/5]￼
 root         35      2     35   5 [kworker/5:0]￼
 root         36      2     36   5 [kworker/5:0H]￼
 root       5439      2   5439   5 [kworker/5:1]￼
-[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==4) print $0}'￼
+[root@kvm-host ~]# ps -eLo ruser,pid,ppid,lwp,psr,args | awk '{if($5==4) print $0}'
 root         27      2     27   4 [watchdog/4]￼
 root         28      2     28   4 [migration/4]￼
 root         29      2     29   4 [ksoftirqd/4]￼
@@ -687,8 +687,8 @@ root         14      2     14   1 [ksoftirqd/1]￼
 root         16      2     16   1 [kworker/1:0H]￼
 root        491      2    491   1 [kworker/1:1]￼
 root       1220      2   1220   1 [kworker/1:1H]￼
-gdm        4050   4009   4050   1 /usr/libexec/gnome-settings-daemon￼
-root       6374   6008   6374   1 /usr/libexec/tracker-miner-apps￼
+gdm        4050   4009   4050   1 /usr/libexec/gnome-settings-daemon
+root       6374   6008   6374   1 /usr/libexec/tracker-miner-apps
 root       7521      2   7521   1 [kworker/1:2]￼
 root       8332   6623   8332   1 ps -eLo ruser,pid,ppid,lwp,psr,args
 ```
