--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第5章 KVM核心基础功能/2. CPU配置.md
@@ -22,6 +22,8 @@
   - [4.3. -cpu model指定模型](#43-cpu-model指定模型)
 - [5. 进程的处理器亲和性和vCPU的绑定](#5-进程的处理器亲和性和vcpu的绑定)
   - [5.1. 启动隔离](#51-启动隔离)
+    - [5.1.1. kernel启动参数](#511-kernel启动参数)
+    - [5.1.2. 通过cpu上进程判断是否隔离](#512-通过cpu上进程判断是否隔离)
   - [5.2. 启动虚拟机并绑定vCPU](#52-启动虚拟机并绑定vcpu)
 
 <!-- /code_chunk_output -->
@@ -645,12 +647,16 @@ power management:
 
 启动宿主机时**隔离出两个逻辑CPU**专门供一个客户机使用。
 
+### 5.1.1. kernel启动参数
+
 在Linux内核**启动的命令**行中加上“**isolcpus**=”参数，可以实现CPU的隔离，使得在系统启动后普通进程默认都不会被调度到被隔离的CPU上执行。例如，隔离cpu4和cpu5的内核启动命令行如下：
 
 ```
 [root@kvm-host ~]# cat /proc/cmdline ￼
 BOOT_IMAGE=/vmlinuz-3.10.0-514.el7.x86_64 root=/dev/mapper/rhel-root ro crashkernel=auto rd.lvm.lv=rhel/root rd.lvm.lv=rhel/swap rhgb quiet LANG=en_US.UTF-8 intel_iommu=on isolcpus=4,5
 ```
+
+### 5.1.2. 通过cpu上进程判断是否隔离
 
 在系统启动后，在宿主机中检查是否隔离成功的命令行如下：
 
@@ -699,7 +705,9 @@ root       8332   6623   8332   1 ps -eLo ruser,pid,ppid,lwp,psr,args
 
 ## 5.2. 启动虚拟机并绑定vCPU
 
-启动一个拥有两个vCPU的客户机，并将其vCPU绑定到宿主机中两个CPU上。此操作过程的命令行如下：
+启动一个拥有两个vCPU的客户机，并将其vCPU绑定到宿主机中两个CPU上。
+
+此操作过程的命令行如下：
 
 ```
 #启动一个客户机￼
@@ -756,6 +764,8 @@ root       5439      2   5439   5 [kworker/5:1]￼
 root       8645      1   8651   5 qemu-system-x86_64 -enable-kvm -smp 2 -m 4G￼ rhel7.img -daemonize
 ```
 
+注: 也可以通过修改xml实现
+
 由上面的命令行及其输出信息可知，在CPU进行绑定之前，代表这个客户机的QEMU进程和代表各个vCPU的QEMU线程分别被调度到cpu6、cpu3和cpu17上。使用taskset命令将QEMU进程和第1个vCPU的线程绑定到cpu4，将第2个vCPU线程绑定到cpu5上。在绑定之后即可查看到绑定结果生效，代表两个vCPU的QEMU线程分别运行在cpu4和cpu5上（即使再过一段时间，它们也不会被调度到其他CPU上去）。
 
 对于taskset命令，此处使用的语法是：
@@ -777,4 +787,3 @@ taskset -pc cpulist pid
 由上面的输出信息可知，客户机中的cpu0对应的线程ID为8649，cpu1对应的线程ID为8651。另外，“CPU#0”前面有一个星号（*），表示cpu0是BSP（Boot Strap Processor，系统最初启动时在SMP生效前使用的CPU）。
 
 总的来说，在KVM环境中，一般并**不推荐手动设置QEMU进程的处理器亲和性**来绑定vCPU，但是，在非常了解系统硬件架构的基础上，根据实际应用的需求，可以将其绑定到特定的CPU上，从而提高客户机中的CPU执行效率或实现CPU资源独享的隔离性。
-
