--- a/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
+++ b/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
@@ -1,7 +1,9 @@
 
-clock source用于为linux内核提供一个**时间基线**，如果你用linux的**date命令**获取**当前时间**，内核会**读取当前的clock source**，转换并返回合适的时间单位给用户空间。
+clock source用于为linux内核提供一个**时间基线**，如果你用linux的**date命令**获取**当前时间**，内核会**读取当前的clock source**(时钟源)，转换并返回合适的时间单位给用户空间。
 
-在硬件层，它通常实现为一个由**固定时钟频率驱动的计数器**，计数器只能单调地增加，直到溢出为止。时钟源是内核计时的基础，系统启动时，内核通过硬件RTC获得当前时间，在这以后，在大多数情况下，内核通过选定的时钟源更新实时时间信息（墙上时间），而不再读取RTC的时间。本节的内核代码树基于V3.4.10。
+在**硬件层**，时钟源通常实现为一个由**固定时钟频率驱动的计数器**，计数器只能**单调地增加**，直到**溢出为止**。
+
+**时钟源**是内核计时的基础，系统启动时，内核通过**硬件RTC**获得**当前时间**，在这以后，在大多数情况下，内核通过**选定的时钟源**更新**实时时间信息**（墙上时间），而不再读取RTC的时间。本节的内核代码树基于V3.4.10。
 
 
 # 参考
