--- a/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
+++ b/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
@@ -74,6 +74,26 @@ clocksource结构中有一个**rating字段**，代表着该时钟源的**精度
 
 # clocksource的注册和初始化
 
+通常，clocksource要在初始化阶段通过`clocksource_register_hz`函数通知内核它的工作时钟的频率，调用的过程如下：
+
+![2020-01-14-10-54-18.png](./images/2020-01-14-10-54-18.png)
+
+由上图可见，最终大部分工作会转由`__clocksource_register_scale`完成，该函数首先完成对mult和shift值的计算，然后根据mult和shift值，最终通过`clocksource_max_deferment`获得该clocksource可接受的最大IDLE时间，并记录在clocksource的`max_idle_ns`字段中。
+
+`clocksource_enqueue`函数负责按clocksource的rating的大小，把该clocksource按顺序挂在**全局链表**`clocksource_list`上，rating值越大，在链表上的位置越靠前。
+
+每次**新的clocksource**注册进来，都会触发`clocksource_select`函数被调用，它按照rating值选择最好的clocksource，并记录在全局变量`curr_clocksource`中，然后通过`timekeeping_notify`函数通知timekeeping，当前clocksource已经变更，关于timekeeping，我将会在后续的博文中阐述。
+
+# clocksource watchdog
+
+系统中可能同时会注册对个clocksource，各个clocksource的精度和稳定性各不相同，为了筛选这些注册的clocksource，内核启用了一个定时器用于监控这些clocksource的性能，定时器的周期设为0.5秒：
+
+# 建立clocksource的简要过程
+
+在系统的启动阶段，内核注册了一个基于jiffies的clocksource，代码位于`kernel/time/jiffies.c`：
+
+当然，如果平台级的代码在初始化时也会注册真正的硬件clocksource，所以经过clocksource_select()函数后，curr_clocksource将会被设为最合适的clocksource。如果clocksource_select函数认为需要切换更好的时钟源，它会通过timekeeping_notify通知timekeeping系统，使用新的clocksource进行时间计数和更新操作。
+
 # 参考
 
 https://blog.csdn.net/DroidPhone/article/details/7975694
