--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -7,12 +7,33 @@
 
 内核管理着多种时间，它们分别是：
 
-RTC时间
-wall time：墙上时间
-monotonic time
-raw monotonic time
-boot time：总启动时间
+* RTC时间
+* wall time：墙上时间
+* monotonic time
+* raw monotonic time
+* boot time：总启动时间
 
+## RTC时间
+
+在PC中，RTC时间又叫**CMOS时间**，它通常由一个**专门的计时硬件**来实现，软件可以读取该硬件来获得年月日、时分秒等时间信息，而在**嵌入式系统**中，有使用专门的**RTC芯片**，也有直接把RTC集成到**Soc芯片**中，读取Soc中的**某个寄存器**即可获取当前时间信息。
+
+一般来说，RTC是一种**可持续计时**的，也就是说，不管系统是否上电，RTC中的时间信息都不会丢失，计时会一直持续进行，硬件上通常使用一个**后备电池**对RTC硬件进行单独的供电。因为RTC硬件的多样性，开发者需要为**每种RTC时钟硬件**提供**相应的驱动程序**，**内核和用户空间**通过**驱动程序**访问RTC硬件来获取或设置时间信息。
+
+## xtime
+
+xtime和RTC时间一样，都是人们日常所使用的**墙上时间**，只是RTC时间的精度通常比较低，大多数情况下只能达到毫秒级别的精度，如果是使用外部的RTC芯片，访问速度也比较慢，为此，内核维护了另外一个wall time时间：xtime，取决于用于对xtime计时的clocksource，它的精度甚至可以达到纳秒级别，因为xtime实际上是一个**内存中的变量**，它的访问速度非常快，内核大部分时间都是使用**xtime**来获得当前时间信息。
+
+xtime记录的是自1970年1月1日24时到当前时刻所经历的纳秒数。
+
+## monotonic time
+
+该时间自系统开机后就一直**单调地增加**，它不像xtime可以因用户的调整时间而产生跳变，不过该时间**不计算系统休眠的时间**，也就是说，系统休眠时，monotoic时间不会递增。
+
+## raw monotonic time
+
+该时间与monotonic时间类似，也是单调递增的时间，唯一的不同是：raw monotonic time“更纯净”，他不会受到NTP时间调整的影响，它代表着系统独立时钟硬件对时间的统计。
+
+## 
 # 参考
 
 https://blog.csdn.net/DroidPhone/article/details/7989566
