--- a/Linux/Memory/系统学习/内存管理全教程(必看)/03-initialize/01-initialize/9. 启动期间的初始化过程概述.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/03-initialize/01-initialize/9. 启动期间的初始化过程概述.md
@@ -3,19 +3,19 @@
 
 <!-- code_chunk_output -->
 
-- [1 前景回顾](#1-前景回顾)
-  - [1.1 Linux内存管理的层次结构](#11-linux内存管理的层次结构)
-  - [1.2 内存结点pg\_data\_t](#12-内存结点pg_data_t)
-  - [1.3 物理内存区域](#13-物理内存区域)
-  - [1.4 物理页帧](#14-物理页帧)
-  - [1.5 今日内容(启动过程中的内存初始化)](#15-今日内容启动过程中的内存初始化)
-- [2 第一阶段(启动过程中的内存管理)](#2-第一阶段启动过程中的内存管理)
-  - [2.1 引导内存分配器bootmem](#21-引导内存分配器bootmem)
-  - [2.2 memblock内存分配器](#22-memblock内存分配器)
-  - [2.3 两者的区别与联系](#23-两者的区别与联系)
-  - [2.4 memblock的初始化(arm64架构)](#24-memblock的初始化arm64架构)
-- [3	第二阶段(初始化buddy内存管理)](#3第二阶段初始化buddy内存管理)
-  - [3.1 初始化流程](#31-初始化流程)
+- [前景回顾](#前景回顾)
+  - [Linux内存管理的层次结构](#linux内存管理的层次结构)
+  - [内存结点pg_data_t](#内存结点pg_data_t)
+  - [物理内存区域](#物理内存区域)
+  - [物理页帧](#物理页帧)
+  - [今日内容(启动过程中的内存初始化)](#今日内容启动过程中的内存初始化)
+- [第一阶段(启动过程中的内存管理)](#第一阶段启动过程中的内存管理)
+  - [引导内存分配器bootmem](#引导内存分配器bootmem)
+  - [memblock内存分配器](#memblock内存分配器)
+  - [两者的区别与联系](#两者的区别与联系)
+  - [memblock的初始化(arm64架构)](#memblock的初始化arm64架构)
+- [第二阶段(初始化buddy内存管理)](#第二阶段初始化buddy内存管理)
+  - [初始化流程](#初始化流程)
   - [3.2 paging\_init初始化分页机制](#32-paging_init初始化分页机制)
   - [3.3 虚拟地址空间(以x86\_32位系统为例)](#33-虚拟地址空间以x86_32位系统为例)
   - [3.4 bootmem\_init初始化内存的基础数据结构(结点pg\_data, 内存域zone, 页面page)](#34-bootmem_init初始化内存的基础数据结构结点pg_data-内存域zone-页面page)
@@ -32,9 +32,9 @@
 
 而我们今天要讲的boot阶段就是系统初始化阶段使用的内存分配器. 
 
-# 1 前景回顾
+# 前景回顾
 
-## 1.1 Linux内存管理的层次结构
+## Linux内存管理的层次结构
 
 Linux把物理内存划分为三个层次来管理
 
@@ -52,7 +52,7 @@ Linux把物理内存划分为三个层次来管理
 
 - 最后**页帧(page frame**)代表了系统内存的最小单位, 堆内存中的每个页都会创建一个struct page的一个实例. 传统上，把内存视为连续的字节，即内存为字节数组，内存单元的编号(地址)可作为字节数组的索引. 分页管理时，将若干字节视为一页，比如4K byte. 此时，内存变成了连续的页，即内存为页数组，每一页物理内存叫页帧，以页为单位对内存进行编号，该编号可作为页数组的索引，又称为页帧号.
 
-## 1.2 内存结点pg\_data\_t
+## 内存结点pg_data_t
 
 在Linux中引入一个数据结构`struct pglist_data` ，来描述一个node，定义在[`include/linux/mmzone.h`](http://lxr.free-electrons.com/source/include/linux/mmzone.h#L630) 文件中。（这个结构被typedef pg\_data\_t）。
 
@@ -76,7 +76,7 @@ extern struct pglist_data contig_page_data;
 #define NODE_DATA(nid)          (&contig_page_data)
 ```
 
-## 1.3 物理内存区域
+## 物理内存区域
 
 因为实际的计算机体系结构有硬件的诸多限制, 这限制了页框可以使用的方式. 尤其是, Linux内核必须处理80x86体系结构的两种硬件约束.
 
@@ -94,7 +94,7 @@ extern struct pglist_data contig_page_data;
 | ZONE_NORMAL | 16MB~895MB |
 | ZONE_HIGHMEM | 896MB~物理内存结束 |
 
-## 1.4 物理页帧
+## 物理页帧
 
 内核把物理页作为内存管理的基本单位.尽管处理器的最小可寻址单位通常是字,但是,内存管理单元MMU通常以页为单位进行处理.因此，从虚拟内存的上来看，页就是最小单位.
 
@@ -108,7 +108,7 @@ extern struct pglist_data contig_page_data;
 
 UMA体系结构中，free\_area\_init函数在系统唯一的struct node对象contig\_page\_data中node\_mem\_map成员赋值给全局的mem\_map变量
 
-## 1.5 今日内容(启动过程中的内存初始化)
+## 今日内容(启动过程中的内存初始化)
 
 在初始化过程中, 还必须建立内存管理的数据结构,以及很多事务.因为内核在内存管理完全初始化之前就需要使用内存.在系统启动过程期间,使用了额外的简化的**内存管理模块**,然后在初始化完成后,将**旧的模块丢弃**掉.
 
@@ -170,7 +170,7 @@ asmlinkage __visible void __init start_kernel(void)
 | [kmemleak\_init](http://lxr.free-electrons.com/source/mm/kmemleak.c?v=4.7#L1857) | Kmemleak工作于内核态，Kmemleak提供了一种**可选的内核泄漏检测**，其方法类似于**跟踪内存收集器**。当独立的对象没有被释放时，其报告记录在 [/sys/kernel/debug/kmemleak](http://lxr.free-electrons.com/source/mm/kmemleak.c?v=4.7#L1467)中, Kmemcheck能够帮助定位大多数内存错误的上下文 |
 | [setup\_per\_cpu\_pageset](http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L5392) | **初始化CPU高速缓存行**, 为pagesets的第一个数组元素分配内存, 换句话说, 其实就是第一个系统处理器分配<br>由于在分页情况下，**每次存储器访问都要存取多级页表**，这就大大降低了访问速度。所以，为了提高速度，在CPU中设置一个最近存取页面的**高速缓存硬件机制**，当进行存储器访问时，先检查要访问的页面是否在高速缓存中. |
 
-# 2 第一阶段(启动过程中的内存管理)
+# 第一阶段(启动过程中的内存管理)
 
 内存管理是操作系统资源管理的重点,但是在**操作系统初始化的初期**,操作系统只是获取到了**内存的基本信息**,但是内存管理的**数据结构**都**没有建立**,而我们这些**数据结构创建的过程**本身就是一个**内存分配的过程**,那么就出现一个问题
 
@@ -178,7 +178,7 @@ asmlinkage __visible void __init start_kernel(void)
 
 即因此在系统启动过程期间,内核使用了一个额外的简化形式的内存管理模块早期的**引导内存分配器(boot memory allocator--bootmem分配器)**或者**memblock**, 用于在启动阶段早期分配内存, 而在**系统初始化完成**后, 该**分配器被内核抛弃**, 然后初始化了一套新的更加完善的内存分配器.
 
-## 2.1 引导内存分配器bootmem
+## 引导内存分配器bootmem
 
 在启动过程期间, 尽管内存管理尚未初始化,但是内核仍然需要分配内存以创建各种数据结构,早期的内核中负责初始化阶段的内存分配器称为**引导内存分配器(boot memory allocator--bootmem分配器)**,在耳熟能详的伙伴系统建立前内存都是利用分配器来分配的，伙伴系统框架建立起来后，bootmem会过度到伙伴系统.显然,对该内存分配器的需求集中于**简单**性方面,而不是性能和通用性,它仅用于初始化阶段.因此内核开发者决定实现一个**最先适配(first-first)分配器**用于在启动阶段管理内存. 这是可能想到的最简单的方式.
 
@@ -194,13 +194,13 @@ bootmem\_data的结构定义在[include/linux/bootmem.h?v=4.7, line 28](http://l
 
 关于引导内存分配器的具体内容, 请参见另外一篇文章
 
-## 2.2 memblock内存分配器
+## memblock内存分配器
 
 但是bootmem也有很多问题.最明显的就是**外碎片**的问题,因此内核维护了**memblock内存分配器**,同时用memblock实现了一份**bootmem相同的兼容API**,即nobootmem,Memblock以前被定义为Logical Memory Block(逻辑内存块), 但根据[Yinghai Lu的补丁](https://lkml.org/lkml/2010/7/13/68), 它被重命名为memblock. 并最终替代bootmem成为初始化阶段的内存管理器
 
 关于引导内存分配器的具体内容, 请参见另外一篇文章
 
-## 2.3 两者的区别与联系
+## 两者的区别与联系
 
 bootmem是通过**位图来管理**，位图存在**低地址段**,而memblock是在**高地址管理内存**, 维护**两个链表**, 即**memory和reserved**
 
@@ -230,7 +230,7 @@ endif
 |:-----:|:-----------:|:------------:|
 | [include/linux/bootmem.h](http://lxr.free-electrons.com/source/include/linux/bootmem.h) | [mm/bootmem.c](http://lxr.free-electrons.com/source/mm/bootmem.c) | [mm/nobootmem.c](http://lxr.free-electrons.com/source/mm/nobootmem.c) |
 
-## 2.4 memblock的初始化(arm64架构)
+## memblock的初始化(arm64架构)
 
 前面我们的内核从**start\_kernel**开始,进入**setup\_arch**(),并完成了**早期内存分配器的初始化和设置**工作.
 
@@ -255,9 +255,9 @@ void __init setup_arch(char **cmdline_p)
 
 其中arm64\_memblock\_init就完成了**arm64架构**下的memblock的初始化
 
-# 3	第二阶段(初始化buddy内存管理)
+# 第二阶段(初始化buddy内存管理)
 
-## 3.1 初始化流程
+## 初始化流程
 
 下面我们就以**arm64架构**来分析bootmem初始化内存**结点**和**内存域**的过程, 在讲解的过程中我们会兼顾的考虑arm64架构下的异同
 
