--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/03-initialize/03-memblock/11. 启动期间的memblock分配器.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/03-initialize/03-memblock/11. 启动期间的memblock分配器.md
@@ -1,37 +1,42 @@
-[TOC]
 
-- 1 非bootmem下的memblock内存管理
-- 2 memblock的数据结构
-    - 2.1 struct memblock结构
-    - 2.2 struct memblock\_type
-    - 2.3 内存区域memblock\_region
-    - 2.4 内存区域标识
-    - 2.5 结构总体布局
-    - 2.6 初始化memblock静态变量
-- 3 Memblock-API函数接口
-    - 3.1 Memblock-API函数接口
-    - 3.2 memblock\_add将内存区域加入到memblock中
-        - 3.2.1 memblock\_add函数
-        - 3.2.2 memblock\_add\_range函数代码
-        - 3.2.3 memblock\_add\_range函数流程解析
-    - 3.3 memblock\_remove删除内存区域
-    - 3.4 memblock\_alloc申请内存
-        - 3.4.1 memblock\_alloc函数代码
-        - 3.4.2 memblock\_alloc\_range\_nid函数
-        - 3.4.3 memblock\_find\_in\_range\_node函数        
-        - 3.4.4 \_\_memblock\_find\_range\_top\_down查找内存区域
-        - 3.4.5 memblock\_reserve标记申请的内存
-    - 3.5 memblock\_free释放内存区域
-- 4 兼容bootmem的接口API
-    - 4.1 memblock与bootmem
-    - 4.2 memblock与bootmem接口对比
-    - 4.3 实现差异
-- 5 memblock初始化
-    - 5.1 x86架构下的memblock初始化
-    - 5.2 arm架构下的memblock初始化
-    - 5.3 arm64下的memblock初始化
-- 6 总结
-- 7 链接
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1 非bootmem下的memblock内存管理](#1-非bootmem下的memblock内存管理)
+- [2 memblock的数据结构](#2-memblock的数据结构)
+  - [2.1 struct memblock结构](#21-struct-memblock结构)
+  - [2.2 struct memblock\_type](#22-struct-memblock_type)
+  - [2.3 内存区域memblock\_region](#23-内存区域memblock_region)
+  - [2.4 内存区域标识](#24-内存区域标识)
+  - [2.5 结构总体布局](#25-结构总体布局)
+  - [2.6 初始化memblock静态变量](#26-初始化memblock静态变量)
+- [3 Memblock-API函数接口](#3-memblock-api函数接口)
+  - [3.1 Memblock-API函数接口](#31-memblock-api函数接口)
+  - [3.2 memblock\_add将内存区域加入到memblock中](#32-memblock_add将内存区域加入到memblock中)
+    - [3.2.1 memblock\_add函数](#321-memblock_add函数)
+    - [3.2.2 memblock\_add\_range函数代码](#322-memblock_add_range函数代码)
+    - [3.2.3 memblock\_add\_range函数流程解析](#323-memblock_add_range函数流程解析)
+  - [3.3 memblock_remove删除内存区域](#33-memblock_remove删除内存区域)
+  - [3.4 memblock\_alloc申请内存](#34-memblock_alloc申请内存)
+    - [3.4.1 memblock_alloc函数代码](#341-memblock_alloc函数代码)
+    - [3.4.2 memblock\_alloc\_range_nid函数](#342-memblock_alloc_range_nid函数)
+    - [3.4.3 memblock\_find\_in\_range\_node函数](#343-memblock_find_in_range_node函数)
+    - [3.4.4 \_\_memblock\_find\_range\_top\_down查找内存区域](#344-__memblock_find_range_top_down查找内存区域)
+    - [3.4.5 memblock\_reserve标记申请的内存](#345-memblock_reserve标记申请的内存)
+  - [3.5 memblock\_free释放内存区域](#35-memblock_free释放内存区域)
+- [4 兼容bootmem的接口API](#4-兼容bootmem的接口api)
+  - [4.1 memblock与bootmem](#41-memblock与bootmem)
+  - [4.2 memblock与bootmem接口对比](#42-memblock与bootmem接口对比)
+  - [4.3 实现差异](#43-实现差异)
+- [5 memblock初始化](#5-memblock初始化)
+  - [5.1 x86架构下的memblock初始化](#51-x86架构下的memblock初始化)
+  - [5.2 arm架构下的memblock初始化](#52-arm架构下的memblock初始化)
+  - [5.3 arm64下的memblock初始化](#53-arm64下的memblock初始化)
+- [6 总结](#6-总结)
+- [7 链接](#7-链接)
+
+<!-- /code_chunk_output -->
 
 # 1 非bootmem下的memblock内存管理
 前面我们讲解了引导内存管理bootmem机制,它基于**最先适配算法**,早期的Linux内核在引导阶段都是通过bootmem来完成初期的内存管理的.但是后来的版本(笔者分析的是3.19)开始把**bootmem弃用**了,`__alloc_memory_core_early()`取代了bootmem的`__alloc_memory_core()`来完成内存分配,而前者其实就是调用的memblock来分配内的.
