--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -35,9 +35,23 @@ struct hrtimer {
 
 # hrtimer如何运转
 
-hrtimer的实现需要一定的硬件基础，它的实现依赖于我们前几章介绍的timekeeper和clock_event_device，如果你对timekeeper和clock_event_device不了解请参考以下文章：Linux时间子系统之三：时间的维护者：timekeeper，Linux时间子系统之四：定时器的引擎：clock_event_device。
+hrtimer的实现需要一定的硬件基础，它的实现依赖于我们前几章介绍的timekeeper和clock_event_device，如果你对`timekeeper`和`clock_event_device`不了解请参考以下文章：
 
+* Linux时间子系统之三：时间的维护者：timekeeper，
+* Linux时间子系统之四：定时器的引擎：clock_event_device。
 
+**hrtimer系统**需要通过**timekeeper**获取**当前的时间**，计算**与到期时间的差值**，并根据该差值，设定该cpu的`tick_device`（`clock_event_device`）的下一次的**到期时间**，时间一到，在`clock_event_device`的**事件回调函数**中处理到期的hrtimer。
+
+现在你或许有疑问：前面在介绍`clock_event_device`时，我们知道，**每个cpu**有自己的`tick_device`，通常用于**周期性**地产生**进程调度**和**时间统计的tick事件**，这里又说要用tick_device调度hrtimer系统，通常cpu只有一个tick_device，那他们如何协调工作？这个问题也一度困扰着我，如果再加上`NO_HZ`配置带来tickless特性，你可能会更晕。这里我们先把这个疑问放下，我将在后面的章节中来讨论这个问题，现在我们只要先知道，一旦开启了hrtimer，`tick_device`所关联的`clock_event_device`的事件回调函数会被修改为：`hrtimer_interrupt`，并且会被设置成工作于`CLOCK_EVT_MODE_ONESHOT`单触发模式。
+
+## 添加一个hrtimer
+
+要添加一个hrtimer，系统提供了一些api供我们使用，首先我们需要定义一个hrtimer结构的实例，然后用`hrtimer_init`函数对它进行初始化，它的原型如下：
+
+```cpp
+void hrtimer_init(struct hrtimer *timer, clockid_t which_clock,
+			 enum hrtimer_mode mode);
+```
 
 # 参考
 
