--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -103,9 +103,9 @@ struct timekeeper {
 };
 ```
 
-其中的xtime字段就是上面所说的墙上时间，它是一个timespec结构的变量，它记录了**自1970年1月1日以来所经过的时间**，因为是**timespec结构**，所以它的精度可以达到**纳秒级**，当然那要取决于系统的硬件是否支持这一精度。
+其中的xtime字段就是上面所说的**墙上时间**，它是一个timespec结构的变量，它记录了**自1970年1月1日以来所经过的时间**，因为是**timespec结构**，所以它的精度可以达到**纳秒级**，当然那要取决于系统的硬件是否支持这一精度。
 
-内核除了用xtime表示墙上的真实时间外，还维护了另外一个时间：monotonic time，可以把它理解为自系统启动以来所经过的时间，该时间只能单调递增，可以理解为xtime虽然正常情况下也是递增的，但是毕竟用户可以主动向前或向后调整墙上时间，从而修改xtime值。但是monotonic时间不可以往后退，系统启动后只能不断递增。奇怪的是，内核并没有直接定义一个这样的变量来记录monotonic时间，而是定义了一个变量`wall_to_monotonic`，记录了**墙上时间**和monotonic时间之间的偏移量，当需要获得**monotonic时间**时，把`xtime`和`wall_to_monotonic`相加即可，因为默认启动时monotonic时间为0，所以实际上`wall_to_monotonic`的值是一个**负数**，它和xtime同一时间被初始化，请参考`timekeeping_init`函数。
+内核除了用xtime表示墙上的真实时间外，还维护了另外一个时间：**monotonic time**，可以把它理解为**自系统启动以来所经过的时间**，该时间只能单调递增，可以理解为xtime虽然正常情况下也是递增的，但是毕竟用户可以主动向前或向后调整墙上时间，从而修改xtime值。但是monotonic时间不可以往后退，系统启动后只能不断递增。奇怪的是，内核并没有直接定义一个这样的变量来记录monotonic时间，而是定义了一个变量`wall_to_monotonic`，记录了**墙上时间**和monotonic时间之间的偏移量，当需要获得**monotonic时间**时，把`xtime`和`wall_to_monotonic`相加即可，因为默认启动时monotonic时间为0，所以实际上`wall_to_monotonic`的值是一个**负数**，它和xtime同一时间被初始化，请参考`timekeeping_init`函数。
 
 计算monotonic时间要去除系统休眠期间花费的时间，内核用total_sleep_time记录休眠的时间，每次休眠醒来后重新累加该时间，并调整wall_to_monotonic的值，使其在系统休眠醒来后，monotonic时间不会发生跳变。因为wall_to_monotonic值被调整。所以如果想获取boot time，需要加入该变量的值：
 
