--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -105,9 +105,35 @@ struct timekeeper {
 
 其中的xtime字段就是上面所说的**墙上时间**，它是一个timespec结构的变量，它记录了**自1970年1月1日以来所经过的时间**，因为是**timespec结构**，所以它的精度可以达到**纳秒级**，当然那要取决于系统的硬件是否支持这一精度。
 
-内核除了用xtime表示墙上的真实时间外，还维护了另外一个时间：**monotonic time**，可以把它理解为**自系统启动以来所经过的时间**，该时间只能单调递增，可以理解为xtime虽然正常情况下也是递增的，但是毕竟用户可以主动向前或向后调整墙上时间，从而修改xtime值。但是monotonic时间不可以往后退，系统启动后只能不断递增。奇怪的是，内核并没有直接定义一个这样的变量来记录monotonic时间，而是定义了一个变量`wall_to_monotonic`，记录了**墙上时间**和monotonic时间之间的偏移量，当需要获得**monotonic时间**时，把`xtime`和`wall_to_monotonic`相加即可，因为默认启动时monotonic时间为0，所以实际上`wall_to_monotonic`的值是一个**负数**，它和xtime同一时间被初始化，请参考`timekeeping_init`函数。
+内核除了用xtime表示墙上的真实时间外，还维护了另外一个时间：**monotonic time**，可以把它理解为**自系统启动以来所经过的时间**，该时间**只能单调递增**，可以理解为xtime虽然正常情况下也是递增的，但是毕竟用户可以**主动向前或向后调整墙上时间**，从而**修改xtime值**。但是monotonic时间不可以往后退，系统启动后只能不断递增。
 
-计算monotonic时间要去除系统休眠期间花费的时间，内核用total_sleep_time记录休眠的时间，每次休眠醒来后重新累加该时间，并调整wall_to_monotonic的值，使其在系统休眠醒来后，monotonic时间不会发生跳变。因为wall_to_monotonic值被调整。所以如果想获取boot time，需要加入该变量的值：
+奇怪的是，内核并没有直接定义一个这样的变量来记录monotonic时间，而是定义了一个变量`wall_to_monotonic`，记录了**墙上时间**和**monotonic时间**之间的**偏移量**，当需要获得**monotonic时间**时，把`xtime`和`wall_to_monotonic`相加即可，因为默认启动时monotonic时间为0，所以实际上`wall_to_monotonic`的值是一个**负数**，它和xtime同一时间被初始化，请参考`timekeeping_init`函数。
+
+计算**monotonic**时间要**去除系统休眠期间花费的时间**，内核用`total_sleep_time`记录**休眠的时间**，每次**休眠醒来**后**重新累加该时间**，并调整`wall_to_monotonic`的值，使其在系统休眠醒来后，monotonic时间**不会发生跳变**。因为`wall_to_monotonic`值被调整。所以如果想获取boot time，需要加入该变量的值：
+
+```cpp
+void get_monotonic_boottime(struct timespec *ts)
+{
+        ......
+	do {
+		seq = read_seqbegin(&timekeeper.lock);
+		*ts = timekeeper.xtime;
+		tomono = timekeeper.wall_to_monotonic;
+		sleep = timekeeper.total_sleep_time;
+		nsecs = timekeeping_get_ns();
+ 
+	} while (read_seqretry(&timekeeper.lock, seq));
+ 
+	set_normalized_timespec(ts, ts->tv_sec + tomono.tv_sec + sleep.tv_sec,
+			ts->tv_nsec + tomono.tv_nsec + sleep.tv_nsec + nsecs);
+}
+```
+
+`raw_time`字段用来表示**真正的硬件时间**，也就是上面所说的`raw monotonic time`，它**不受时间调整的影响**，monotonic时间虽然也不受`settimeofday`的影响，但会受到ntp调整的影响，但是`raw_time`**不受ntp**的影响，他真的就是开完机后就单调地递增。
+
+`xtime`、monotonic-time和raw_time可以通过用户空间的clock_gettime函数获得，对应的ID参数分别是 CLOCK_REALTIME、CLOCK_MONOTONIC、CLOCK_MONOTONIC_RAW。
+
+clock字段则指向了目前timekeeper所使用的时钟源，xtime，monotonic time和raw time都是基于该时钟源进行计时操作，当有新的精度更高的时钟源被注册时，通过timekeeping_notify函数，change_clocksource函数将会被调用，timekeeper.clock字段将会被更新，指向新的clocksource。
 
 早期的内核版本中，`xtime`、`wall_to_monotonic`、`raw_time`其实是定义为全局静态变量，到我目前的版本（V3.4.10），这几个变量被移入到了`timekeeper`结构中，现在只需维护一个**timekeeper全局静态变量**即可：
 
