--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -131,9 +131,9 @@ void get_monotonic_boottime(struct timespec *ts)
 
 `raw_time`字段用来表示**真正的硬件时间**，也就是上面所说的`raw monotonic time`，它**不受时间调整的影响**，monotonic时间虽然也不受`settimeofday`的影响，但会受到ntp调整的影响，但是`raw_time`**不受ntp**的影响，他真的就是开完机后就单调地递增。
 
-`xtime`、monotonic-time和raw_time可以通过用户空间的clock_gettime函数获得，对应的ID参数分别是 CLOCK_REALTIME、CLOCK_MONOTONIC、CLOCK_MONOTONIC_RAW。
+`xtime`、`monotonic-time`和`raw_time`可以通过用户空间的`clock_gettime`函数获得，对应的ID参数分别是 `CLOCK_REALTIME`、`CLOCK_MONOTONIC`、`CLOCK_MONOTONIC_RAW`。
 
-clock字段则指向了目前timekeeper所使用的时钟源，xtime，monotonic time和raw time都是基于该时钟源进行计时操作，当有新的精度更高的时钟源被注册时，通过timekeeping_notify函数，change_clocksource函数将会被调用，timekeeper.clock字段将会被更新，指向新的clocksource。
+**clock字段**则指向了目前**timekeeper所使用的时钟源**，xtime，monotonic time和raw time都是基于该时钟源进行计时操作，当有**新的精度更高的时钟源**被注册时，通过`timekeeping_notify`函数，`change_clocksource`函数将会被调用，timekeeper.clock字段将会被更新，指向新的clocksource。
 
 早期的内核版本中，`xtime`、`wall_to_monotonic`、`raw_time`其实是定义为全局静态变量，到我目前的版本（V3.4.10），这几个变量被移入到了`timekeeper`结构中，现在只需维护一个**timekeeper全局静态变量**即可：
 
@@ -145,7 +145,33 @@ static struct timekeeper timekeeper;
 
 timekeeper的初始化由`timekeeping_init`完成，该函数在`start_kernel`的初始化序列中被调用，`timekeeping_init`首先从RTC中获取当前时间：
 
+```cpp
+void __init timekeeping_init(void)
+{
+	struct clocksource *clock;
+	unsigned long flags;
+	struct timespec now, boot;
+ 
+	read_persistent_clock(&now);
+	read_boot_clock(&boot);
+```
+
+然后对锁和ntp进行必要的初始化：
+
+```cpp
+	seqlock_init(&timekeeper.lock);
+ 
+	ntp_init();
+```
+
+接着获取默认的clocksource，如果平台没有重新实现clocksource_default_clock函数，默认的clocksource就是基于jiffies的clocksource_jiffies，然后通过timekeeper_setup_inernals内部函数把timekeeper和clocksource进行关联：
+
+
 # 5. 时间的更新
+
+xtime一旦初始化完成后，**timekeeper**就开始**独立于RTC**，利用**自身关联的clocksource**进行**时间的更新操作**，根据内核的配置项的不同，更新时间的操作发生的频度也不尽相同，如果**没有配置NO\_HZ选项**，通常**每个tick**的**定时中断周期**，do_timer会被调用一次，相反，如果配置了NO_HZ选项，可能会在好几个tick后，do_timer才会被调用一次，当然传入的参数是本次更新离上一次更新时相隔了多少个tick周期，系统会保证在clocksource的max_idle_ns时间内调用do_timer，以防止clocksource的溢出：
+
+
 
 # 6. 获取时间
 
