--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -169,9 +169,18 @@ void __init timekeeping_init(void)
 
 # 5. 时间的更新
 
-xtime一旦初始化完成后，**timekeeper**就开始**独立于RTC**，利用**自身关联的clocksource**进行**时间的更新操作**，根据内核的配置项的不同，更新时间的操作发生的频度也不尽相同，如果**没有配置NO\_HZ选项**，通常**每个tick**的**定时中断周期**，do_timer会被调用一次，相反，如果配置了NO_HZ选项，可能会在好几个tick后，do_timer才会被调用一次，当然传入的参数是本次更新离上一次更新时相隔了多少个tick周期，系统会保证在clocksource的max_idle_ns时间内调用do_timer，以防止clocksource的溢出：
+xtime一旦初始化完成后，**timekeeper**就开始**独立于RTC**，利用**自身关联的clocksource**进行**时间的更新操作**，根据内核的配置项的不同，更新时间的操作发生的频度也不尽相同，如果**没有配置NO\_HZ选项**，通常**每个tick**的**定时中断周期**，`do_timer`会被调用一次，相反，如果配置了`NO_HZ`选项，可能会在好几个tick后，`do_timer`才会被调用一次，当然传入的参数是本次更新离上一次更新时相隔了多少个tick周期，系统会保证在clocksource的max_idle_ns时间内调用do_timer，以防止clocksource的溢出：
 
+```cpp
+void do_timer(unsigned long ticks)
+{
+	jiffies_64 += ticks;
+	update_wall_time();
+	calc_global_load(ticks);
+}
+```
 
+在`do_timer`中，`jiffies_64`变量被相应地累加，然后在`update_wall_time`中完成**xtime等时间的更新操作**，更新时间的核心操作就是**读取关联clocksource的计数值**，累加到**xtime**等字段中，其中还设计ntp时间的调整等代码，详细的代码就不贴了。
 
 # 6. 获取时间
 
