--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/4. 定时器的引擎: clock_event_device.md
+++ b/Linux/Time/Linux时间子系统/4. 定时器的引擎: clock_event_device.md
@@ -19,6 +19,17 @@
 * 在软件架构上看，`clock_event_device`被分为了**两层**，与**硬件相关**的被放在了**machine层**，而**与硬件无关**的通用代码则被集中到了**通用时间框架层**，这符合内核对软件的设计需求，平台的开发者只需实现平台相关的接口即可，无需关注复杂的上层时间框架。
 * `tick_device`是基于`clock_event_device`的进一步封装，用于**代替原有的时钟滴答中断**，给内核提供tick事件，以完成进程的调度和进程信息统计，负载平衡和时间更新等操作。
 
+# 时钟事件设备相关数据结构
+
+## struct clock_event_device
+
+## 全局变量clockevent_devices
+
+## 全局变量clockevents_chain
+
+# clock_event_device的初始化和注册
+
+
 
 # 参考
 
